# music-servcice

./: .coverage  .env  README.md  alembic.ini  gunicorn_conf.py  main.py  music_service.pyproj  music_service.sln  pyproject.toml  run.py  test  test.js  text  Диаграмма без названия.drawio
core/async_queue/: __init__.py  celery_config.py
core/db/db_dependency/: connect_db.py
core/db/redis_dependency/: connect_redis.py
core/s3/: s3_client.py
database/: association_tables.py  enums.py  mixins.py  models.py
migrations/: env.py
migrations/versions/: 10c9e90e0d34_.py  225624493316_.py  2bdd2a1b75ab_.py  3fbcbd4495e3_.py  42fa075fb02d_.py  460f063067b2_.py  4e8bbe4b20d6_.py  81aa82e888e4_.py  849f0e8a17e2_first_migration.py  992a8212dbf8_.py  a30efa4528c6_.py  b69f09d116d5_add_album_id_field_into_track.py  d07c6bcfc9d6_add_cascde_delete.py  d2c0736eaac1_.py  f4fb46936aeb_fix_cascade_delete.py  f646348a63ea_.py  f6b2dbfda4ca_lower_case_for_assciation_tables.py  f8f5d094bd8f_.py  fb41a3118ecd_.py
settings/: setting.py
src/: dependency.py  main.py  schemas.py
src/apps/: main.py
src/apps/admin/: admin_base.py
src/apps/album/: depenency.py  main.py  manager.py  routers.py  schemas.py  service.py
src/apps/artist/: dependency.py  main.py  manager.py  routers.py  schemas.py  service.py
src/apps/auth/: dependency.py  handlers.py  main.py  (+5 more)
tests/: confest.py  conftest.py  pytest.ini
tests/test_album/: album.py
tests/test_playlist/: test_playlist.py
tests/test_search/: test_search.py
tests/test_track/: test_track.py
tests/test_user/: test_get_user.py
(+39 files in other folders)
